check if adding test options fixes it